--- a/src/main/resources/templates/layout/main-layout.html
+++ b/src/main/resources/templates/layout/main-layout.html
@@ -42,6 +42,7 @@
                     <li class="nav-item"><a class="nav-link" href="./join-class">참여중인 강의</a></li>
                     <li class="nav-item"><a class="nav-link" href="./add-class">강의 개설</a></li>
                     <li class="nav-item"><a class="nav-link" href="./my-class-list">나의 강의 관리</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./my-elrolment-list">수강 관리</a></li>
                     <th:block sec:authorize="isAuthenticated()">
                         <li class="nav-item"><a class="nav-link" href="./logout">로그아웃</a></li>
                     </th:block>
