--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -103,10 +103,21 @@
                 code.focus();
                 return;
             }
+            const requestCode = code.value;
             code.value = '';
             invalidCode.innerText = '';
-            joinReqeustModal.hide();
+            joinRequest(requestCode);
         });
+
+        function joinRequest(code){
+            axios.post(`/api/classroom/${code}/elrolment`)
+            .then(res=>{
+                showMessage("수강 신청 완료");
+                joinReqeustModal.hide();
+            }).catch(error=>{
+                showMessage(error.response['data']);
+            });
+        }
     </script>
 </div>
 </html>
