--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,123 +1,80 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/main-layout">
+      layout:decorator="layout/default-layout">
 <th:block layout:fragment="css">
     <style>
-        .card-right {
-            position: relative;
-            left: 50px;
-        }
 
-        @media (max-width: 600px) {
-            .card-right {
-                left: 0px;
-            }
-        }
-        .shadow {
-            cursor:pointer;
-            background: white;
-            border-radius: 3px;
-        }
-
-        .shadow:hover {
-            transition: .3s;
-            text-shadow: 1px 1px 10px rgb(35,107,175);
-        }
     </style>
 </th:block>
 <div layout:fragment="content">
-    <th:block th:replace="fragment/bgVideo :: videoFragment">
-    </th:block>
-    <section class="py-5" id="features">
-        <div class="container">
-            <div class="row gx-5">
-                <div class="col-lg-3"></div>
-                <div class="col-lg-8">
-                    <div class="row gx-5 row-cols-1 row-cols-md-2">
-                        <div class="col mb-5 h-100 p-4 shadow" id="myClassBtn">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                            <h2 class="h5">내 강의</h2>
-                            <p class="mb-0">내가 개설한 강의 목록을 볼 수 있습니다.</p>
-                        </div>
-                        <div class="col mb-5 h-100 p-4 shadow card-right" id="joinClassBtn">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
-                            <h2 class="h5">참여중인 강의</h2>
-                            <p class="mb-0">현재 수강중인 강의 목록을 볼 수 있습니다.</p>
-                        </div>
-                        <div class="col mb-5 h-100 p-4 shadow" id="addClassBtn">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                            <h2 class="h5">강의 개설</h2>
-                            <p class="mb-0">새로운 강의를 개설해보세요.</p>
-                        </div>
-                        <div class="col mb-5 h-100 p-4 shadow card-right" data-bs-toggle="modal" data-bs-target="#joinReqeustModal">
-                            <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                            <h2 class="h5">강의 참여</h2>
-                            <p class="mb-0">다른 사용자의 강의를 참여해보세요</p>
-                        </div>
-                    </div>
-                </div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-6 p-5 text-center card" style="left: -10px; cursor: pointer" data-bs-toggle="modal" data-bs-target="#openConferenceModal">
+                <h2><i class="bi bi-plus-square-fill"></i></h2><h4>회의 개설</h4>
+            </div>
+            <div class="col-6 p-5 text-center card" style="left: 10px; cursor: pointer;">
+                <h2><i class="bi bi-box-arrow-in-right"></i></h2><h4>코드로 회의 참여</h4>
             </div>
         </div>
-    </section>
-    <div class="modal fade" id="joinReqeustModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    </div>
+
+    <div class="modal fade" id="openConferenceModal">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h5 class="modal-title">회의 개설</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+
+                <!-- Modal body -->
                 <div class="modal-body">
-                    <div class="form-floating mb-3">
-                        <input class="form-control" id="code" type="text" placeholder="사용자에게 부여받은 수업 코드를 입력해주세요."/>
-                        <label for="code">사용자에게 부여받은 수업 코드를 입력해주세요.</label>
-                        <div style="color: red; margin-left: 10px; margin-top: 5px;" id="invalidCode"></div>
+                    <div>
+                        <div class="mb-3 mt-3">
+                            회의 제목 :
+                            <input th:class="mt-3" type="text" id="conferenceTitle">
+                        </div>
+                        <div class="mb-3">
+                            회의 제한 인원 :
+                            <input th:class="mt-3" type="number" class="form-control" id="limitCount" value="2" min="2" max="10">
+                        </div>
                     </div>
                 </div>
+
+                <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-sm" id="joinRequestBtn">수강 신청</button>
-                    <button type="button" class="btn btn-primary btn-sm" data-bs-dismiss="modal">닫기</button>
+                    <button id="openConferenceBtn" type="button" class="btn btn-success">회의 개최</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">닫기</button>
                 </div>
+
             </div>
         </div>
     </div>
 </div>
 <div layout:fragment="scripts">
     <script>
-        const joinReqeustModal = new bootstrap.Modal(document.getElementById("joinReqeustModal"), {});
-        const code = document.getElementById('code');
-        const invalidCode = document.getElementById('invalidCode');
-
-        const joinRequestBtn = document.getElementById('joinRequestBtn');
-        const myClassBtn = document.getElementById('myClassBtn');
-        const addClassBtn = document.getElementById('addClassBtn');
-        const joinClassBtn = document.getElementById('joinClassBtn');
-        myClassBtn.addEventListener('click', ()=>{
-            location.href = "./my-class";
+        document.getElementById('openConferenceBtn').addEventListener('click', ()=>{
+           showConfirmMessage('정말 위 사항대로 회의를 개최하시겠습니까?', ()=>{
+               $.ajax({
+                   method: "post",
+                   url: "/api/conference",
+                   contentType: "application/json",
+                   data: JSON.stringify({
+                       title : document.getElementById('conferenceTitle').value.trim(),
+                       limitCount : document.getElementById('limitCount').value,
+                   }),
+                   success : function(res){
+                       location.href = `./conference?code=${res.code}`;
+                   },
+                   error : function(res){
+                       showMessage(res.responseText, ()=>{})
+                   }
+               })
+           });
         });
-        addClassBtn.addEventListener('click', ()=>{
-            location.href = './add-class';
-        });
-        joinClassBtn.addEventListener('click', ()=>{
-            location.href = './join-class';
-        });
-        joinRequestBtn.addEventListener('click', ()=>{
-            if(code.value.trim() === ''){
-                invalidCode.innerText = '- 수업 코드를 입력해주세요.';
-                code.focus();
-                return;
-            }
-            const requestCode = code.value;
-            code.value = '';
-            invalidCode.innerText = '';
-            joinRequest(requestCode);
-        });
-
-        function joinRequest(code){
-            axios.post(`/api/classroom/${code}/elrolment`)
-            .then(res=>{
-                showMessage("수강 신청 완료");
-                joinReqeustModal.hide();
-            }).catch(error=>{
-                showMessage(error.response['data']);
-            });
-        }
     </script>
 </div>
 </html>
+
