--- a/src/main/resources/templates/conference.html
+++ b/src/main/resources/templates/conference.html
@@ -16,7 +16,7 @@
         }
     </style>
 </head>
-<body onbeforeunload="disconnect();" style="width: 100%; height: 100%;" class="bg-dark">
+<body style="width: 100%; height: 100%;" class="bg-dark">
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -26,7 +26,7 @@
             <ul class="navbar-nav me-auto">
                 <button class="btn btn-light btn-sm" type="button" style="margin-right: 10px;" id="chatAbleBtn">대화창</button>
                 <button class="btn btn-danger btn-sm" type="button" style="margin-right: 10px;" data-bs-toggle="modal" data-bs-target="#conferenceInfoModal">회의 정보</button>
-                <button class="btn btn-warning btn-sm" type="button" style="margin-right: 10px;" data-bs-toggle="modal" data-bs-target="#joinerListModal">회의자 목록[나를 제외한 <span id="joinerCount">0</span>]</button>
+                <button class="btn btn-warning btn-sm" type="button" style="margin-right: 10px;" data-bs-toggle="modal" data-bs-target="#joinerListModal">회의자 목록[<span id="joinerCount">0</span>명]</button>
                 <button class="btn btn-primary btn-sm" type="button" style="margin-right: 10px;" data-bs-toggle="modal" data-bs-target="#settingModal"><span class="spinner-grow spinner-grow-sm" style="margin-right: 5px;"></span>설정</button>
             </ul>
             <div class="form-check form-switch" style="margin-right: 10px;">
@@ -38,7 +38,6 @@
                 <label class="form-check-label text-white" for="mic">마이크</label>
             </div>
             <button class="btn btn-danger btn-sm" type="button" style="margin-right: 10px;" id="shakeBtn">손 흔들기</button>
-            <button class="btn btn-primary btn-sm" type="button" style="margin-right: 10px;">투표 개설</button>
             <button class="btn btn-outline-success btn-sm" type="button" id="originScreen" style="display: none; margin-right: 30px;">화면 공유 해제</button>
             <button class="btn btn-success btn-sm" type="button" id="shareScreen" style="margin-right: 30px;">화면 공유</button>
 
@@ -49,7 +48,6 @@
 <div class="row">
     <div class="col-12 row p-3" id="videoArea">
         <div id="remoteVideosContainer">
-            <video id="selfView" autoplay="autoplay" class="col-3"/>
         </div>
     </div>
     <!-- 채팅 -->
@@ -57,10 +55,7 @@
         <div class="card p-3 mt-2" style="height: 300px; overflow-y: auto" id="chatMessageArea">
         </div>
         <input class="mt-2 form-control" id="chatFelid"/>
-        <button class="btn btn-primary mt-2 mb-2" style="width: 100%;" id="sendBtn">보내기</button>
-        <hr/>
-        <input type="file" class="form-control-file border mb-2" style="width: 100%;">
-        <button class="btn btn-success mt-2 mb-2" style="width: 100%;">파일 공유</button>
+        <br/>
     </div>
 </div>
 <div id="bigSizeVideoContainer" style="width: 100vh; height: 90vh; display: none; text-align: center">
@@ -79,9 +74,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-                코드 : <span id="conferenceCode"></span>
-                <br>
-                제한 인원 수 : <span id="conferenceLimitCount"></span> 명
+                코드 : <span id="conferenceCode"></span> <button id="copyCodeBtn" class="btn btn-sm btn-primary">복사</button>
+                <input id="copyInput" style="display: none;">
                 <br>
                 회의 개최 날짜 : <span id="conferenceDate"></span>
                 <br>
@@ -115,6 +109,7 @@
         <div class="modal-content">
             <div class="modal-body">
                 <ul class="list-group" id="joinerList">
+
                 </ul>
             </div>
         </div>
@@ -133,8 +128,11 @@
         </div>
     </div>
 </div>
-<input id="currentUserId" type="hidden" th:value ="${#authentication.getPrincipal().getUsername()}"/>
+<input id="currentPanelistId" type="hidden" th:value ="${#authentication.getPrincipal().getUsername()}"/>
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-<script src="./js/classroom.js"></script>
+<script src="./js/conferenceroom.js"></script>
+<script src="./js/participant.js"></script>
+<script src="./js/kurento-utils.js"></script>
+<script src="./js/chat.js"></script>
 </body>
 </html>
