프로젝트 구조 변경

--- a/src/main/resources/templates/conference.html
+++ b/src/main/resources/templates/conference.html
@@ -90,6 +90,8 @@
             <div class="modal-body">
                 배치(한줄당) :
                 <select class="form-select mt-3" id="changeLayoutSelect">
+                    <option value="col-12">1개씩 보기</option>
+                    <option value="col-6">2개씩 보기</option>
                     <option value="col-4">3개씩 보기</option>
                     <option value="col-3" selected>4개씩 보기</option>
                     <option value="col-2">6개씩 보기</option>
