프로젝트 마무리

--- a/src/main/resources/templates/conference.html
+++ b/src/main/resources/templates/conference.html
@@ -75,7 +75,11 @@
             </div>
             <div class="modal-body">
                 코드 : <span id="conferenceCode"></span> <button id="copyCodeBtn" class="btn btn-sm btn-primary">복사</button>
+                <br>
+                <br>
+                키 : <span id="conferenceKey"></span> <button id="copyKeyBtn" class="btn btn-sm btn-primary">복사</button>
                 <input id="copyInput" style="display: none;">
+                <br>
                 <br>
                 회의 개최 날짜 : <span id="conferenceDate"></span>
                 <br>
