--- a/src/main/resources/templates/layout/default-layout.html
+++ b/src/main/resources/templates/layout/default-layout.html
@@ -9,8 +9,8 @@
     <th:block th:replace="fragment/config :: configFragment">
     </th:block>
 </head>
-<body class="d-flex flex-column h-100">
-<main class="mt-5">
+<body class="d-flex flex-column h-100 bg-dark">
+<main>
     <th:block layout:fragment="content">
     </th:block>
 </main>
