--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -9,8 +9,8 @@
 </th:block>
 <div layout:fragment="content">
     <div class="container row mt-5">
-        <div class="col-4"></div>
-        <div class="card p-5 col-5 text-center">
+        <div class="col-md-4 col-sm-1"></div>
+        <div class="card p-5 col-md-5 col-sm-11 text-center">
             <h2>회의자 등록</h2>
             <div>
                 <div class="mb-3 mt-3">
